# OC_Python_P13_Lettings

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  README.md  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt
.circleci/: config.yml
docs/source/: conf.py  deployment.rst  development.rst  index.rst  modules.rst  oc_lettings_site.rst  oc_lettings_site.views.rst
lettings/: models.py  views.py
lettings/migrations/: 0001_initial.py
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_remove_letting_address_delete_address_delete_letting.py  0003_delete_profile.py
profiles/: models.py  views.py
profiles/migrations/: 0001_initial.py
templates/: index.html  sentry_test.html
