[tool.poetry]
name = "orange-county-lettings"
version = "0.1.0"
description = "Application for the real estate rental sector."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
python-dotenv = "^1.0.0"
sentry-sdk = {extras = ["django"], version = "^1.39.0"}
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-django = "^4.7.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
